<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.tensorflow.strokechange.Information"
    android:orientation="vertical"
    android:padding="10dp">

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:ems="100"
            android:textSize="30dp"
            android:text="@string/how_to_use"
            android:textAlignment="center" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="10dp">

            <TextView
                android:id="@+id/info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/info_home_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_home_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="20dp"/>

    <TextView
        android:id="@+id/info_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_home"
        app:layout_constraintStart_toEndOf="@+id/info_home_title"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/info_report_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_report_title"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/info_home"
        android:padding="20dp"/>

    <TextView
        android:id="@+id/info_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_report"
        app:layout_constraintStart_toEndOf="@+id/info_report_title"
        android:padding="10dp"/>




</LinearLayout>