<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.tensorflow.strokechange.Home">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="549dp"
        android:layout_above="@+id/tvDescription">

        <TextView
            android:id="@+id/tvPlaceholder"
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:layout_gravity="center"
            android:text="@string/tv_placeholder"
            android:textAlignment="center"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="588dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:scaleType="fitCenter" />

        <Button
            android:id="@+id/save_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center|bottom"
            android:layout_margin="16dp"
            android:text="@string/save_image"
            android:textAllCaps="false" />


    </FrameLayout>
    <Button
        android:id="@+id/captureImageFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center|bottom"
        android:layout_margin="16dp"
        android:drawableLeft="@drawable/ic_camera"
        android:text="@string/tv_take_photo"
        android:textAllCaps="false" />

</FrameLayout>